<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="caixa">Caixa</string>
    <string name="app_name">KanaKing</string>
    <string name="moenda">Moenda</string>
    <string name="fechar_caixa">Fechar Caixa</string>
    <string name="abrir_caixa">Abrir Caixa</string>
    <string name="reabrir_caixa">Reabrir Caixa</string>
    <string name="conectar_seguro">Conectar</string>
    <string name="conectar_inseguro">Conectar (Inseguro)</string>
    <string name="relAgora">Vendas até agora</string>
    <string name="relPeriodo">Vendas por período</string>
    <string name="visivel">Tornar-se visível</string>
    <string name="title_paired_devices">Dispositivos Pareados</string>
    <string name="title_other_devices">Outros Dispositivos</string>
    <string name="none_paired">Nenhum Dispositivo pareado</string>
    <string name="scanning">Procurando dispositivos…</string>
    <string name="select_device">Escolha com quem conectar</string>
    <string name="none_found">Nenhum dispositivo encontrado</string>
    <string name="nao_conectado">Não conectado com um dispositivo</string>

    <!--Estados de conexão-->
    <string name="title_not_connected">Não conectado</string>
    <string name="title_connected_to">Conectado com <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_connecting">Conectando…</string>
    <string name="title_listening">Aguardando conexão…</string>

    <string name="caixa_fechado">Caixa fechado</string>

    <!--Relatório de Vendas até agora e Vendas por período-->
    <string name="rel_vendas_ate_agora">Relatório de Vendas até agora</string>
    <string name="rel_vendas_periodo">Relatório de Vendas por período</string>
    <string name="rel_fundo_caixa">Fundo de Caixa:</string>
    <string name="rel_total_dinheiro">Total vendas Dinheiro:</string>
    <string name="rel_total_cartao">Total vendas Cartão:</string>
    <string name="rel_total_geral">Total geral de Vendas:</string>
    <string name="rel_total_caixa">Valor total em caixa:</string>
    <string name="rel_periodo_consulta">Período de consulta:</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="data_final">Data Final</string>
    <string name="esconder">Esconder</string>
    <string name="mostrar_todos">Mostrar Todos</string>
    <string name="creditos_descricao">"Os ícones utilizados na Interface do Usuário e na montagem do ícone do aplicativo foram feitos por:
        - Freepik (http://www.freepik.com);
        - Smashicons (https://www.flaticon.com/authors/smashicons);
        - AnhGreen (https://www.flaticon.com/authors/anhgreen);
        - Eucalyp (https://www.flaticon.com/authors/eucalyp);
        - Alfredo Hernandez (https://www.flaticon.com/authors/alfredo-hernandez);
        - Butterflytronics (https://www.flaticon.com/authors/butterflytronics);
        - Catalin Fertu (https://www.flaticon.com/authors/catalin-fertu); e
        - Those Icons (https://www.flaticon.com/authors/those-icons)
        ambos obtidos do site www.flaticon.com (https://www.flaticon.com/) e são licenciados pela Creative Commons BY 3.0 (http://creativecommons.org/licenses/by/3.0/)"</string>
    <string name="creditos_titulo">Créditos</string>
</resources>