<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/conectar_seguro"
        android:title="@string/conectar_seguro"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/abrirCaixa"
        android:title="@string/abrir_caixa"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reabrirCaixa"
        android:title="@string/reabrir_caixa"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/relAgora"
        android:title="@string/relAgora"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/relPeriodo"
        android:title="@string/relPeriodo"
        app:showAsAction="ifRoom" />
</menu>